# multable

./: Dockerfile  README.md  pyproject.toml
multable/: argparse_model.py  main.py
multable/texresource/: import_input.tex  importinput.tex  template.tex
